@@ -9,6 +9,9 @@ Change history for Coverage.py
 - The ``COVERAGE_OPTIONS`` environment variable is no longer supported.  It was
   a hack for ``--timid`` before configuration files were available.
 
+- Made some PyPy-specific tweaks to improve speed under PyPy.  Thanks, Alex
+  Gaynor.
+
 
 4.0a1 --- 27 September 2014
 ---------------------------
